# spatter_in_compute

./: CMakeLists.txt  Compilation_Instructions.txt  README.md
cmake/pkgs/: JSONSupport.cmake
src/: CMakeLists.txt
src/Spatter/: CMakeLists.txt  Configuration copy 2.cc  Configuration copy.cc  Configuration.cc  PatternParser.cc
src/Spatter/kernels/compute/: gather copy.cpp  gather.cpp  gather_compute_kernel.cpp  gather_compute_kernel_32b.cpp  gather_compute_kernel_mc.cpp  scatter_compute_kernel.cpp  scatter_compute_kernel_mc.cpp
src/Spatter/kernels/data/: gather_kernel_in_riscv.cpp  gather_kernel_in_riscv_multicore.cpp  gather_read_kernel_compute.cpp  gather_read_kernel_compute_32b.cpp  gather_read_kernel_compute_mc.cpp  gather_read_kernel_compute_mc_32b.cpp  gather_write_kernel_compute.cpp  gather_write_kernel_compute_32b.cpp  gather_write_kernel_compute_mc.cpp  gather_write_kernel_compute_mc_32b.cpp  multi_gather_kernel_in_riscv.cpp  multi_scatter_kernel_in_riscv.cpp  read_kernel copy.cpp  read_kernel.cpp  read_kernel_copy.cpp  scatter_gather_kernel_in_riscv.cpp  scatter_kernel_in_riscv.cpp  scatter_kernel_in_riscv_multicore.cpp  scatter_read_kernel_compute.cpp  scatter_read_kernel_compute_mc.cpp  scatter_write_kernel_compute.cpp  scatter_write_kernel_compute_mc.cpp  write_kernel copy.cpp  write_kernel.cpp  write_kernel_copy.cpp
standard-suite/binary-traces/: gz_read.cc
